# philosophy_extractor

./: README.md  main.py  philosophy_report.md  pyproject.toml  report.md  sample.txt  sample_journal.txt
src/philosophy_extractor/: cli.py  clustering.py  events.py  people.py  report.py  values.py
src/philosophy_extractor/data/: sample_journal.txt
