[project]
name = "philosophy-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.4.1",
    "keybert>=0.9.0",
    "rich>=15.0.0",
    "scikit-learn>=1.8.0,<1.9.0",
    "sentence-transformers>=5.5.1",
    "spacy>=3.8.14",
    "srsly>=2.5.3",
    "thinc>=8.3.13",
    "torch>=2.12.0",
    "transformers>=5.10.2",
    "typer>=0.26.7",
    "wasabi>=1.1.3",
]

[project.scripts]
philosophy-extractor = "philosophy_extractor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]

[tool.hatch.build.targets.wheel]
packages = ["src/philosophy_extractor"]

[tool.hatch.build]
include = [
    "src/philosophy_extractor/data/*.txt"
]