[project]
name = "philosophy-extractor"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.4.1",
    "keybert>=0.9.0",
    "rich>=15.0.0",
    "scikit-learn>=1.3.2,<1.4.0",
    "sentence-transformers>=2.7.0,<3.0.0",
    "spacy>=3.7.5,<3.8.0",
    "torch>=2.2.0,<2.3.0",
    "transformers>=4.41.2,<5.0.0",
    "typer>=0.26.7",
    "wasabi>=1.1.3",
]

[project.scripts]
philosophy-extractor = "philosophy_extractor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]

[tool.hatch.build.targets.wheel]
packages = ["src/philosophy_extractor"]

[tool.hatch.build]
include = [
    "src/philosophy_extractor/data/*.txt"
]