[project]
name = "philosophy-extractor"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.0",
    "keybert>=0.8.0",
    "rich>=13.0.0",
    "scikit-learn>=1.3.2",
    "sentence-transformers>=2.7.0",
    "spacy>=3.7.5",
    "torch>=2.2.0",
    "transformers>=4.41.2",
    "typer>=0.9.0",
    "wasabi>=1.1.3",
]

[project.scripts]
philosophy-extractor = "philosophy_extractor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]

[tool.hatch.build.targets.wheel]
packages = ["src/philosophy_extractor"]

[tool.hatch.build]
include = [
    "src/philosophy_extractor/data/*.txt"
]